--- a/99002652/99002652.cbp
+++ b/99002652/99002652.cbp
@@ -41,6 +41,7 @@
 		<Unit filename="Rooms.h" />
 		<Unit filename="file.csv" />
 		<Unit filename="main.cpp" />
+		<Unit filename="test_file.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
